Add e2e test support with some examples

--- a/config/config-test.yaml
+++ b/config/config-test.yaml
@@ -5,7 +5,7 @@ service:
   consumer_session_secret_key: 'secret'
 
 database:
-  database: 'ayberk'
+  database: 'ayberk-test'
   host: 'localhost'
   port: '27017'
   user: 'root' 
